Fix table border collapsing in grids.
This addresses a visual bug which was probably introduced with the
integration of the UI library in pkp/pkp-lib#2771.

--- a/styles/controllers/grid/grid.less
+++ b/styles/controllers/grid/grid.less
@@ -130,6 +130,7 @@
 	// Grid rows
 	table {
 		width: 100%;
+		border-collapse: collapse;
 	}
 
 	tr {
